--- a/GUI Clean Comment/GUI Clean Comment/packages.config
+++ b/GUI Clean Comment/GUI Clean Comment/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
+  <package id="EntityFramework" version="6.5.1" targetFramework="net472" />
   <package id="ExcelDataReader" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.ProgramSynthesis.Common" version="8.32.0" targetFramework="net472" />
   <package id="Microsoft.ProgramSynthesis.Detection" version="8.32.0" targetFramework="net472" />
@@ -8,10 +8,13 @@
   <package id="Microsoft.ProgramSynthesis.Read.FlatFile" version="8.32.0" targetFramework="net472" />
   <package id="Microsoft.ProgramSynthesis.Split.Text" version="8.32.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
-  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.118.0" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.119.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections.Immutable" version="8.0.0" targetFramework="net472" />
-  <package id="System.Data.SQLite.Core" version="1.0.118.0" targetFramework="net472" />
+  <package id="System.Data.SQLite" version="1.0.119.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.119.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.EF6" version="1.0.119.0" targetFramework="net472" />
+  <package id="System.Data.SQLite.Linq" version="1.0.119.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
